--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
             <h3>**** 1234</h3>
           </div>
           <div class="card-right">
-            <a href="#"><img src="images/Admin.svg" alt="Debug menu" /></a>
+            <a href="#"
+              ><img id="reset" src="images/Admin.svg" alt="Debug menu"
+            /></a>
             <h3>01/99</h3>
           </div>
         </div>
@@ -32,7 +34,7 @@
       <div class="icons">
         <a href="#"><img src="images/Menu.svg" alt="Menu" /></a>
         <a href="#"><img src="images/Building.svg" alt="Business" /></a>
-        <a href="#"><img src="images/Cash.svg" alt="Cash" /></a>
+        <img src="images/Cash.svg" alt="Cash" />>
         <a href="#"><img src="images/Profile.svg" alt="Profile" /></a>
       </div>
     </footer>
