--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="icons">
         <a href="#"><img src="images/Menu.svg" alt="Menu" /></a>
         <a href="#"><img src="images/Building.svg" alt="Business" /></a>
-        <img src="images/Cash.svg" alt="Cash" />>
+        <img src="images/Cash.svg" alt="Cash" />
         <a href="#"><img src="images/Profile.svg" alt="Profile" /></a>
       </div>
     </footer>
